# deepseek-r1-1.5b-deploy-on-rk3588

./: CMakeLists.txt  README.md  build.sh
src/: rkllm.cpp
weights/: README.md
